--- a/src/App.sass
+++ b/src/App.sass
@@ -1,2 +1,21 @@
+
+//import font dari google font    
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap')
+    
+    
+* //Normalkan margin dan padding
+    padding: 0px
+    margin: 0px
+    
 body
     background-color: #000000
+    font-family: 'Inter', sans-serif
+    display: flex
+    flex-direction: column
+    color: white
+    
+.box1
+    background-color: white
+.box2
+     background-color: blue
+
