--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,22 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
+* {
+  padding: 0px;
+  margin: 0px;
+}
+
 body {
   background-color: #000000;
+  font-family: "Inter", sans-serif;
+  display: flex;
+  flex-direction: column;
+}
+
+.box1 {
+  background-color: white;
+}
+
+.box2 {
+  background-color: blue;
 }
 
 /*# sourceMappingURL=App.css.map */
