--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -1,1 +1,49 @@
-/*# sourceMappingURL=index.css.map */
+.hero {
+  background-image: url("assets/img_hero_overlay.png");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+  padding: 64px 120px 0 120px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.hero h1 {
+  padding-bottom: 16px;
+}
+.hero h2 {
+  padding-bottom: 24px;
+}
+
+h1 {
+  font-size: 64px;
+  font-weight: bold;
+  line-height: 72px;
+}
+
+h2 {
+  font-size: 32px;
+  font-weight: normal;
+  line-height: 40px;
+  width: 24ch;
+  text-align: center;
+}
+
+.carousel-running-container {
+  padding: 24px 120px 24px 120px;
+  background-color: transparent;
+  overflow-x: scroll;
+}
+.carousel-running-container ul {
+  display: flex;
+  flex-direction: row;
+  list-style-type: none;
+  gap: 24px;
+}
+.carousel-running-container .carousel-img {
+  background: yellow;
+  width: 304px;
+  height: 368px;
+  border-radius: 16px;
+  box-shadow: 0 0 24px -8px black;
+}/*# sourceMappingURL=index.css.map */
