feat: made an infinite slider photos

--- a/src/pages/index.sass
+++ b/src/pages/index.sass
@@ -1,19 +1,35 @@
 
 
-//panggil variabel dari App.sass
-    @use './App.sass'
+
+//animation function in sass
+
+@mixin animate($animation,$duration,$method,$times)
+    animation: $animation $duration $method $times
+
+
+@mixin keyframes($name)
+    @keyframes #{$name}
+        @content
+    
+
 
 .hero
     // background-color: blue
     background-image: url("assets/img_hero_overlay.png")
     background-repeat: no-repeat
-    background-attachment: fixed
-    background-position: center
-    padding: 64px 120px 0 120px
+    background-position: center-top
+    background-size: cover
+    padding: 64px 120px
     display: flex
     flex-direction: column
     align-items: center
+    .logo-ubicon
+        width: 80px
+        height: 80px
+        img
+            height: 100%
     h1
+        padding-top: 68px
         padding-bottom: 16px
     h2
         padding-bottom: 24px
@@ -33,15 +49,44 @@ h2
     padding: 24px 120px 24px 120px
     // background-color: orange
     background-color: transparent
-    overflow-x: scroll
+    overflow-x: hidden
+    position: relative
+    display: flex
+   
+    
     ul
+        width: 100%
         display: flex
         flex-direction: row
         list-style-type: none
-        gap: 24px
+        justify-content: center
+        align-items: center
+        transition: all 1s ease
+        @include keyframes(carousel-running-animation)
+            0%
+                transform: translateX(0%)
+            100%
+                transform: translateX(-100%)
+                // transform: translateX(calc(-304px * 4))
+        @include animate(carousel-running-animation, 12s, linear, infinite)
+        
+        
     .carousel-img
-        background: yellow
+        position: relative
+        display: flex
+        flex: 1
+        background: blue
         width: 304px
         height: 368px
         border-radius: 16px
         box-shadow: 0 0 24px -8px black //box-shadow: [horizontal offset] [vertical offset] [blur radius] [optional spread radius] [color];
+        margin-right: 24px
+        
+       
+       
+       
+       
+        
+       
+
+
