--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -1,14 +1,22 @@
 .hero {
   background-image: url("assets/img_hero_overlay.png");
   background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-position: center;
-  padding: 64px 120px 0 120px;
+  background-position: center-top;
+  background-size: cover;
+  padding: 64px 120px;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
+.hero .logo-ubicon {
+  width: 80px;
+  height: 80px;
+}
+.hero .logo-ubicon img {
+  height: 100%;
+}
 .hero h1 {
+  padding-top: 68px;
   padding-bottom: 16px;
 }
 .hero h2 {
@@ -32,18 +40,36 @@ h2 {
 .carousel-running-container {
   padding: 24px 120px 24px 120px;
   background-color: transparent;
-  overflow-x: scroll;
+  overflow-x: hidden;
+  position: relative;
+  display: flex;
 }
 .carousel-running-container ul {
+  width: 100%;
   display: flex;
   flex-direction: row;
   list-style-type: none;
-  gap: 24px;
+  justify-content: center;
+  align-items: center;
+  transition: all 1s ease;
+  animation: carousel-running-animation 12s linear infinite;
+}
+@keyframes carousel-running-animation {
+  0% {
+    transform: translateX(0%);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
 }
 .carousel-running-container .carousel-img {
-  background: yellow;
+  position: relative;
+  display: flex;
+  flex: 1;
+  background: blue;
   width: 304px;
   height: 368px;
   border-radius: 16px;
   box-shadow: 0 0 24px -8px black;
+  margin-right: 24px;
 }/*# sourceMappingURL=index.css.map */
