--- a/src/App.sass
+++ b/src/App.sass
@@ -11,6 +11,7 @@ $brand-violet: #774AF7
 * //Normalkan margin dan padding
     padding: 0px
     margin: 0px
+    box-sizing: border-box
     
 body
     background-color: white
