--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -9,11 +9,17 @@
   align-items: center;
 }
 .hero .logo-ubicon {
-  width: 80px;
-  height: 80px;
+  background-image: radial-gradient(54.66% 54.66% at 50% 50%, #EBE4FF 0%, rgba(255, 255, 255, 0) 100%);
+  width: 416px;
+  height: 416px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: -140px;
 }
 .hero .logo-ubicon img {
-  height: 100%;
+  width: 80px;
+  height: 80px;
 }
 .hero h1 {
   padding-top: 68px;
