--- a/src/pages/index.sass
+++ b/src/pages/index.sass
@@ -24,10 +24,16 @@
     flex-direction: column
     align-items: center
     .logo-ubicon
-        width: 80px
-        height: 80px
+        background-image: radial-gradient(54.66% 54.66% at 50.00% 50.00%, #EBE4FF 0%, rgba(255, 255, 255, 0.00) 100%)
+        width: 416px
+        height: 416px
+        display: flex
+        justify-content: center
+        align-items: center
+        margin-bottom: -140px
         img
-            height: 100%
+            width: 80px
+            height: 80px
     h1
         padding-top: 68px
         padding-bottom: 16px
