--- a/src/components/navbar/index.css
+++ b/src/components/navbar/index.css
@@ -2,6 +2,7 @@
 * {
   padding: 0px;
   margin: 0px;
+  box-sizing: border-box;
 }
 
 body {
@@ -14,13 +15,22 @@ body {
 
 .navbar-container {
   position: relative;
+  z-index: 2;
   width: 100%;
   height: 128px;
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   background-color: transparent;
+  padding: 0px 120px;
+}
+.navbar-container .navbar-logo {
+  height: 36px;
+  width: 144px;
+}
+.navbar-container .navbar-logo img {
+  height: 100%;
 }
 .navbar-container a {
   text-decoration: none;
