--- a/src/components/navbar/index.sass
+++ b/src/components/navbar/index.sass
@@ -3,13 +3,22 @@
 @use "../../../src/App" 
 .navbar-container
     position: relative
+    z-index: 2
     width: 100%
     height: 128px
     display: flex
     flex-direction: row //flex horizontal
     align-items: center //kasih ke tengah secara vertical
-    justify-content: center //kasih ke tengah secara horizontal
+    justify-content: space-between //kasih ke tengah secara horizontal
     background-color: transparent
+    padding: 0px 120px
+
+    .navbar-logo
+        height: 36px
+        width: 144px
+        // background-color: blue
+        img
+            height: 100%
 
     a
         text-decoration: none
