--- a/src/pages/home/index.css
+++ b/src/pages/home/index.css
@@ -1,4 +1,46 @@
-.hero {
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
+* {
+  padding: 0px;
+  margin: 0px;
+  box-sizing: border-box;
+}
+
+body {
+  background-color: white;
+  font-family: "Inter", sans-serif;
+  display: flex;
+  flex-direction: column;
+  color: #242424;
+}
+
+h1 {
+  color: #242424;
+  font-size: 64px;
+  font-weight: bold;
+  line-height: 72px;
+  text-align: center;
+}
+
+h2 {
+  font-size: 32px;
+  font-weight: normal;
+  line-height: 40px;
+  width: 24ch;
+  text-align: center;
+}
+
+p {
+  color: #7E7E7E;
+  text-align: center;
+  font-family: Inter;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 32px;
+  text-align: center;
+}
+
+section.hero {
   background-image: url("assets/img_hero_overlay.png");
   background-repeat: no-repeat;
   background-position: top;
@@ -11,7 +53,7 @@
   position: relative;
   z-index: 1;
 }
-.hero .logo-ubicon {
+section.hero .logo-ubicon {
   background-image: radial-gradient(54.66% 54.66% at 50% 50%, #EBE4FF 0%, rgba(255, 255, 255, 0) 100%);
   width: 416px;
   height: 416px;
@@ -20,41 +62,27 @@
   align-items: center;
   margin-bottom: -140px;
 }
-.hero .logo-ubicon img {
+section.hero .logo-ubicon img {
   width: 80px;
   height: 80px;
 }
-.hero h1 {
+section.hero h1 {
   padding-top: 68px;
   padding-bottom: 16px;
 }
-.hero h2 {
+section.hero h2 {
   padding-bottom: 24px;
 }
 
-h1 {
-  font-size: 64px;
-  font-weight: bold;
-  line-height: 72px;
-}
-
-h2 {
-  font-size: 32px;
-  font-weight: normal;
-  line-height: 40px;
-  width: 24ch;
-  text-align: center;
-}
-
-.carousel-running-container {
+div.carousel-running-container {
   padding: 24px 120px 24px 120px;
   background-color: transparent;
   overflow-x: hidden;
   position: relative;
   display: flex;
+  flex-wrap: nowrap;
 }
-.carousel-running-container ul {
-  width: 100%;
+div.carousel-running-container ul {
   display: flex;
   flex-direction: row;
   list-style-type: none;
@@ -71,7 +99,7 @@ h2 {
     transform: translateX(-100%);
   }
 }
-.carousel-running-container .carousel-img {
+div.carousel-running-container .carousel-img {
   position: relative;
   display: flex;
   flex: 1;
@@ -81,4 +109,29 @@ h2 {
   border-radius: 16px;
   box-shadow: 0 0 24px -8px black;
   margin-right: 24px;
+}
+
+section.research-type {
+  display: flex;
+  flex-direction: column;
+  margin: 120px 120px;
+  align-items: center;
+}
+section.research-type h1 {
+  margin-bottom: 44px;
+  width: 16ch;
+}
+section.research-type .p1 {
+  margin-bottom: 60px;
+  width: 32ch;
+}
+section.research-type ul {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  list-style-type: none;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+  width: 1200px;
 }/*# sourceMappingURL=index.css.map */
