--- a/src/pages/home/index.sass
+++ b/src/pages/home/index.sass
@@ -1,5 +1,5 @@
 
-
+@use '../../App'
 
 //animation function in sass
 
@@ -12,8 +12,34 @@
         @content
     
 
+//global style
 
-.hero
+h1
+    color: App.$primary-gray
+    font-size: 64px
+    font-weight: bold
+    line-height: 72px
+    text-align: center
+h2
+    font-size: 32px
+    font-weight: normal
+    line-height: 40px
+    width: 24ch
+    text-align: center
+p
+    color: #7E7E7E
+    text-align: center
+    font-family: Inter
+    font-size: 24px
+    font-style: normal
+    font-weight: 400
+    line-height: 32px
+    text-align: center
+
+
+
+//parted style
+section.hero
     // background-color: blue
     background-image: url("assets/img_hero_overlay.png")
     background-repeat: no-repeat
@@ -43,28 +69,18 @@
     h2
         padding-bottom: 24px
 
-h1
-    font-size: 64px
-    font-weight: bold
-    line-height: 72px
-h2
-    font-size: 32px
-    font-weight: normal
-    line-height: 40px
-    width: 24ch
-    text-align: center
 
-.carousel-running-container
+div.carousel-running-container
     padding: 24px 120px 24px 120px
     // background-color: orange
     background-color: transparent
     overflow-x: hidden
     position: relative
     display: flex
-   
+    flex-wrap: nowrap
+    
     
     ul
-        width: 100%
         display: flex
         flex-direction: row
         list-style-type: none
@@ -92,7 +108,28 @@ h2
         margin-right: 24px
         
        
-       
+section.research-type
+    display: flex
+    flex-direction: column
+    margin: 120px 120px
+    align-items: center
+    h1
+        margin-bottom: 44px
+        width: 16ch
+    .p1
+        margin-bottom: 60px
+        width: 32ch
+    ul
+        display: flex
+        flex-direction: row
+        flex-wrap: wrap
+        list-style-type: none
+        justify-content: center
+        align-items: center
+        gap: 16px
+        width: 1200px
+   
+
        
        
         
