--- a/src/pages/home/index.sass
+++ b/src/pages/home/index.sass
@@ -35,6 +35,26 @@ p
     font-weight: 400
     line-height: 32px
     text-align: center
+button
+    p
+        width: 100%
+        text-align: center
+        font-family: Inter
+        font-size: 24px
+        font-style: normal
+        font-weight: 700
+        line-height: 24px
+        color: white
+    display: flex
+    border-radius: 8px
+    border: none
+    background-color: App.$brand-violet
+    padding: 16px
+    transition: all .5s ease-in-out
+
+button:hover
+    transform: scale(115%)
+    cursor: pointer
 
 
 
@@ -56,13 +76,14 @@ section.hero
         background-image: radial-gradient(54.66% 54.66% at 50.00% 50.00%, #EBE4FF 0%, rgba(255, 255, 255, 0.00) 100%)
         width: 416px
         height: 416px
-        display: flex
+        display: flex        
         justify-content: center
         align-items: center
         margin-bottom: -140px
         img
             width: 80px
             height: 80px
+            border-radius: 16px
     h1
         padding-top: 68px
         padding-bottom: 16px
@@ -128,9 +149,61 @@ section.research-type
         align-items: center
         gap: 16px
         width: 1200px
-   
 
-       
+
+section.our-people
+    width: 100%
+    display: flex
+    flex-direction: column
+    align-items: center
+    justify-content: center
+    background: radial-gradient(15% 35% at center, #774AF7 0%, rgba(255, 255, 255, 0.00) 100%)
+    margin-bottom: 120px
+
+    .our-people-container
+        height: 512px
+        width: 1200px
+        display: flex
+        flex-direction: column
+        align-items: center
+        // justify-content: center
+        padding: 48px 120px
+        row-gap: 42px
+        border-radius: 16px
+        // background-color: App.$primary-gray
+        background-color: rgba(242, 242, 242, 0.50)
+        backdrop-filter: blur(4px)
+    .preview-img-wrapper
+        display: flex
+        margin-top: -240px
+        align-items: center
+        justify-content: center
+        #head-of-ubicon
+            z-index: 5
+            // background-color: yellow
+            margin: 40px -80px 0px
+        #ubicon-1, #ubicon-2
+            // background-color: orange
+            transform: rotate(-9.27deg)
+            margin: 0px -24px 0px
+        #ubicon-3, #ubicon-4
+            // background-color: purple
+            transform: rotate(9.27deg)
+            margin: 0px -24px 0px
+        #ubicon-3
+            z-index: 1
+        #ubicon-4
+            z-index: 0
+        .preview-img
+            position: relative
+            display: flex
+            background: blue
+            width: 304px
+            height: 368px
+            border-radius: 16px
+            box-shadow: 0 0 24px -8px black //box-shadow: [horizontal offset] [vertical offset] [blur radius] [optional spread radius] [color];
+            
+        
        
         
        
