--- a/src/pages/home/index.css
+++ b/src/pages/home/index.css
@@ -41,6 +41,7 @@ p {
 }
 
 button {
+  height: 56px;
   display: flex;
   border-radius: 8px;
   border: none;
@@ -215,4 +216,45 @@ section.our-people .preview-img-wrapper .preview-img {
   height: 368px;
   border-radius: 16px;
   box-shadow: 0 0 24px -8px black;
+}
+
+section.news-section {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  padding: 0px 120px 120px;
+  flex-direction: column;
+  gap: 82px;
+  /* Hide scrollbar for Chrome, Safari and Opera */
+}
+section.news-section .news-header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+}
+section.news-section .news-header .news-header-left {
+  display: flex;
+  flex-direction: column;
+  row-gap: 24px;
+}
+section.news-section .news-header .news-header-left h1 {
+  text-align: left;
+}
+section.news-section .news-header .news-header-left p {
+  text-align: left;
+  width: 24ch;
+}
+section.news-section ul.news-content-renderer {
+  display: flex;
+  flex-direction: row;
+  gap: 24px;
+  width: 100%;
+  overflow-x: scroll;
+  /* Hide scrollbar for IE, Edge and Firefox */
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+section.news-section ul.news-content-renderer::-webkit-scrollbar {
+  display: none;
 }/*# sourceMappingURL=index.css.map */
